add damage critical block color save and load

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -3,3 +3,5 @@
 ProjectID=A3FFCF0A4FD24D5222E25A825CAC9795
 CopyrightNotice=copyright Druid bujingyun
 
+[/Script/GameplayAbilities.AbilitySystemGlobals]
++AbilitySystemGlobalsClassName="/Script/Aura.AuraAbilitySystemGlobals"
