--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -6,10 +6,12 @@ AllowEditorTagUnloading=True
 AllowGameTagUnloading=False
 FastReplication=False
 InvalidTagCharacters="\"\',"
++GameplayTagRedirects=(OldTagName="Event.Montage.Melee",NewTagName="Event.Montage.Attack.Melee")
 NumBitsForContainerSize=6
 NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="Attributes.Vital.Health",DevComment=" 玩家在死亡之前的HP")
 +GameplayTagList=(Tag="Attributes.Vital.Mana",DevComment="玩家在死亡之前的MP")
++GameplayTagList=(Tag="Event.Montage.Attack.Melee",DevComment="")
 +GameplayTagList=(Tag="Event.Montage.FireBolt",DevComment="")
 +GameplayTagList=(Tag="Message.HealthCrystal",DevComment="")
 +GameplayTagList=(Tag="Message.HealthPotion",DevComment="")
