--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -13,6 +13,7 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="Attributes.Vital.Mana",DevComment="玩家在死亡之前的MP")
 +GameplayTagList=(Tag="Event.Montage.Attack.Melee",DevComment="")
 +GameplayTagList=(Tag="Event.Montage.FireBolt",DevComment="")
++GameplayTagList=(Tag="GameplayCue.MeleeImpact",DevComment="")
 +GameplayTagList=(Tag="Message.HealthCrystal",DevComment="")
 +GameplayTagList=(Tag="Message.HealthPotion",DevComment="")
 +GameplayTagList=(Tag="Message.ManaCrystal",DevComment="")
