--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -12,8 +12,11 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="Attributes.Vital.Health",DevComment=" 玩家在死亡之前的HP")
 +GameplayTagList=(Tag="Attributes.Vital.Mana",DevComment="玩家在死亡之前的MP")
 +GameplayTagList=(Tag="Event.Montage.Attack.Melee",DevComment="")
++GameplayTagList=(Tag="Event.Montage.Electrocute",DevComment="")
 +GameplayTagList=(Tag="Event.Montage.FireBolt",DevComment="")
 +GameplayTagList=(Tag="GameplayCue.MeleeImpact",DevComment="")
++GameplayTagList=(Tag="GameplayCue.ShockBurst",DevComment="")
++GameplayTagList=(Tag="GameplayCue.ShockLoop",DevComment="")
 +GameplayTagList=(Tag="Message.HealthCrystal",DevComment="")
 +GameplayTagList=(Tag="Message.HealthPotion",DevComment="")
 +GameplayTagList=(Tag="Message.ManaCrystal",DevComment="")
