--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -11,6 +11,7 @@ NumBitsForContainerSize=6
 NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="Attributes.Vital.Health",DevComment=" 玩家在死亡之前的HP")
 +GameplayTagList=(Tag="Attributes.Vital.Mana",DevComment="玩家在死亡之前的MP")
++GameplayTagList=(Tag="Cooldown.Lighting.Electrocute",DevComment="")
 +GameplayTagList=(Tag="Event.Montage.Attack.Melee",DevComment="")
 +GameplayTagList=(Tag="Event.Montage.Electrocute",DevComment="")
 +GameplayTagList=(Tag="Event.Montage.FireBolt",DevComment="")
