--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -51,6 +51,8 @@ r.DefaultFeature.AutoExposure.ExtendDefaultLuminanceRange=True
 r.CustomDepth=3
 r.TextureStreaming=True
 r.Streaming.PoolSize=1000
+r.AntiAliasingMethod=3
+r.DefaultFeature.MotionBlur=False
 
 [/Script/WorldPartitionEditor.WorldPartitionEditorSettings]
 CommandletClass=Class'/Script/UnrealEd.WorldPartitionConvertCommandlet'
