add fire blast and MainMenu

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -4,7 +4,7 @@
 net.MaxRPCPerNetUpdate=10
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/Map/DungeonMap.DungeonMap
+GameDefaultMap=/Game/Map/MainMenu.MainMenu
 EditorStartupMap=/Game/Map/DungeonMap.DungeonMap
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
