--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -5,7 +5,7 @@ net.MaxRPCPerNetUpdate=10
 
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/Map/MainMenu.MainMenu
-EditorStartupMap=/Game/Map/DungeonMap.DungeonMap
+EditorStartupMap=/Game/Map/LoadMenu.LoadMenu
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
